(impl) formatting mc, and add some new mods